--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,12 +1,3 @@
-.container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 .title a {
   color: #0070f3;
   text-decoration: none;
@@ -40,7 +31,7 @@
 }
 
 .grid {
-  position:absolute;
+  position:fixed;
   bottom: 0;
   display: flex;
   align-items: center;
@@ -50,6 +41,8 @@
   flex-direction: row;
   white-space: nowrap;
   width: 100%;
+  left: 0;
+  filter: drop-shadow(0 0 0.75rem rgb(0, 0, 0));
 }
 
 .cardDisable {
@@ -57,6 +50,9 @@
   white-space: nowrap;
   text-decoration: none;
   color: aquamarine;
+  background-color: #131516;
+  width: 100%;
+  height: 100%;
 }
 
 .cardEnable {
@@ -65,6 +61,8 @@
   text-decoration: none;
   color: rgb(193, 127, 255);
   background-color: rgb(82, 82, 82);
+  width: 100%;
+  height: 100%;
 }
 
 .logo {
@@ -80,4 +78,9 @@
   font-size: 0.9rem;
   white-space: pre-wrap;
   }
+}
+/* Compensates for bottom navbar */
+.componentMarginBottom{
+  margin: 0.5rem;
+  margin-bottom: 150px;
 }
